cluster/aigin/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aigin-backend
  namespace: aigin
spec:
  type: NodePort
  ports:
  - targetPort: 3001
    nodePort: 30082
    port: 3001
  selector:
    app: aigin-backend
