cluster/aigin/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aigin-frontend
  namespace: aigin
spec:
  type: NodePort
  ports:
  - targetPort: 3000
    nodePort: 30081
    port: 3000
  selector:
    app: aigin-frontend
