cluster/aigin/frontend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: aigin

spec:
  ports:
    - name: web
      port: 3000
      targetPort: web

  selector:
    app: aigin
