cluster/aigin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aigin-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: web
